--- a/source/form.html
+++ b/source/form.html
@@ -88,7 +88,9 @@
             </ul>
           </div>
 
-          <h3 class="form__subtitle">Контактные данные <br> (владельца кота)</h3>
+          <div class="form_subtitle-wrapper">
+            <h3 class="form__subtitle form__subtitle--contacts">Контактные данные <br> (владельца кота)</h3>
+          </div>
 
           <ul class="form__list form__list--contacts">
 
@@ -121,18 +123,22 @@
             </li>
           </ul>
 
-          <h3 class="form__subtitle">Комментарий</h3>
+          <div class="form_subtitle-wrapper">
+            <h3 class="form__subtitle form__subtitle--message">Комментарий</h3>
+          </div>
 
           <div class="form__message">
             <label class="visually-hidden" for="msg">Описание повадок кота</label>
             <textarea class="form__input form__input--textarea" id="msg" name="message" placeholder="Расскажите обо всех повадках кота"></textarea>
           </div>
 
-          <h3 class="form__subtitle">Дополнительно</h3>
+          <div class="form_subtitle-wrapper">
+            <h3 class="form__subtitle form__subtitle--optional">Дополнительно</h3>
+          </div>
 
           <ul class="form__list form__list--optional">
             <li class="form__item form__item--optional">
-              <input class="form__checkbox-input visually-hidden" disabled type="checkbox" id="sweetener" name="sugar-subtitute" checked>
+              <input class="form__checkbox-input visually-hidden" type="checkbox" id="sweetener" name="sugar-subtitute" checked>
               <label class="form__label form__label--checkbox" for="sweetener">Сахарозаменитель</label>
             </li>
 
