--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,9 +10,12 @@
 
     <header class="page-header">
       <div class="page-header__row-wrapper">
-        <a class="page-header__logo">
-          <img class="page-header__logo-img" src="./img/logo-header-img.svg" width="34" height="38" alt="Логотип cat energy">
-          <img class="page-header__logo-title" src="./img/logo-header-title.svg" width="101" height="18" alt="Заголовок cat energy">
+        <a class="page-header__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1280px)" srcset="./img/header-logo/logo-header-desktop.svg">
+            <source media="(min-width: 768px)" srcset="./img/header-logo/logo-header-tablet.svg">
+            <img src="./img/header-logo/logo-header-mobile.svg" width="191" height="38" alt="Логотип cat energy">
+          </picture>
         </a>
 
         <button class="page-header__toggle page-header__toggle--close page-header__toggle--nojs" type="button">
@@ -46,7 +49,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-1.png" alt="" width="68" height="86">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.png 1x, ./img/catalog/product-card-1-desktop.png 2x">
+              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-1-mobile.png" srcset="./img/catalog/product-card-1-mobile@2x.png 2x" alt="" width="68" height="86">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy pro 500 г</h3>
@@ -72,7 +78,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-2.png" width="84" height="101" alt="">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.png 1x, ./img/catalog/product-card-2-desktop.png 2x">
+              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-2-mobile.png" srcset="./img/catalog/product-card-2-mobile@2x.png 2x" alt="" width="84" height="101">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy pro 1000 г</h3>
@@ -100,7 +109,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-3.png" width="68" height="78" alt="">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.png 1x, ./img/catalog/product-card-3-desktop.png 2x">
+              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-3-mobile.png" srcset="./img/catalog/product-card-3-mobile@2x.png 2x" width="68" height="78" alt="">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy pro 500 г</h3>
@@ -128,7 +140,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-4.png" width="84" height="101" alt="">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.png 1x, ./img/catalog/product-card-4-desktop.png 2x">
+              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-4-mobile.png" srcset="./img/catalog/product-card-4-mobile@2x.png 2x" alt="" width="84" height="101">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy pro 1000 г</h3>
@@ -156,7 +171,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-5.png" width="68" height="78" alt="">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.png 1x, ./img/catalog/product-card-5-desktop.png 2x">
+              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-5-mobile.png" srcset="./img/catalog/product-card-5-mobile@2x.png 2x" alt="" width="68" height="78">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy slim 500 г</h3>
@@ -184,7 +202,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-6.png" width="84" height="100" alt="">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.png 1x, ./img/catalog/product-card-6-desktop.png 2x">
+              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-6-mobile.png" srcset="./img/catalog/product-card-6-mobile@2x.png 2x" alt="" width="84" height="101">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy slim 1000 г</h3>
@@ -212,7 +233,10 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <img class="product-card__img" src="./img/catalog/product-card-7.png" width="72" height="84" alt="">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.png 1x, ./img/catalog/product-card-7-desktop.png 2x">
+              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-7-mobile.png" srcset="./img/catalog/product-card-7-mobile@2x.png 2x" alt="" width="72" height="84">
+            </picture>
           </div>
           <div class="product-card__description">
             <h3 class="product-card__title">cat energy slim 500 г</h3>
@@ -239,7 +263,7 @@
         </article>
 
         <article class="product-card product-card--last">
-          <img class="product-card__icon" src="./img/icon-plus.svg" width="30" height="30" alt="">
+          <img class="product-card__icon" src="./img/catalog/icon-plus-mobile.svg" width="30" height="30" alt="">
           <p class="product-card__title product-card__title--last">Показать еще 100500 товаров</p>
           <p class="product-card__text">На самом деле вкусов гораздо больше!</p>
           <a class="button product-card__button product-card__button--last" href="#">Показать все</a>
@@ -294,7 +318,7 @@
           <section class="present">
             <div class="present__wrapper">
               <h2 class="visually-hidden">Акция</h2>
-              <img class="present__img" src="./img/icon_present.svg" width="78" height="80" alt="Изображение подарочной коробки">
+              <img class="present__img" src="./img/present/icon_present.svg" width="78" height="80" alt="Изображение подарочной коробки">
               <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
             </div>
           </section>
