--- a/source/form.html
+++ b/source/form.html
@@ -11,8 +11,11 @@
     <header class="page-header">
       <div class="page-header__row-wrapper">
         <a class="page-header__logo" href="index.html">
-          <img class="page-header__logo-img" src="./img/logo-header-img.svg" width="34" height="38" alt="Логотип cat energy">
-          <img class="page-header__logo-title" src="./img/logo-header-title.svg" width="101" height="18" alt="Заголовок cat energy">
+          <picture>
+            <source media="(min-width: 1280px)" srcset="./img/header-logo/logo-header-desktop.svg">
+            <source media="(min-width: 768px)" srcset="./img/header-logo/logo-header-tablet.svg">
+            <img src="./img/header-logo/logo-header-mobile.svg" width="191" height="38" alt="Логотип cat energy">
+          </picture>
         </a>
 
         <button class="page-header__toggle page-header__toggle--close page-header__toggle--nojs" type="button">
