--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
       </symbol>
 
       <symbol viewBox="0 0 22 22" id="facebook">
-        <path d="M16.5 1.83325H13.75C12.5344 1.83325 11.3686 2.30674 10.5091 3.14957C9.64956 3.99239 9.16667 5.1355 9.16667 6.32743V9.02394H6.41667V12.6193H9.16667V19.81H12.8333V12.6193H15.5833L16.5 9.02394H12.8333V6.32743C12.8333 6.08905 12.9299 5.86042 13.1018 5.69186C13.2737 5.52329 13.5069 5.4286 13.75 5.4286H16.5V1.83325Z" stroke="#666666" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M16.5 1.83325H13.75C12.5344 1.83325 11.3686 2.30674 10.5091 3.14957C9.64956 3.99239 9.16667 5.1355 9.16667 6.32743V9.02394H6.41667V12.6193H9.16667V19.81H12.8333V12.6193H15.5833L16.5 9.02394H12.8333V6.32743C12.8333 6.08905 12.9299 5.86042 13.1018 5.69186C13.2737 5.52329 13.5069 5.4286 13.75 5.4286H16.5V1.83325Z" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round"/>
       </symbol>
 
       <symbol viewBox="0 0 27 34" id="html-academy">
@@ -236,7 +236,7 @@
             <li class="social__item">
               <a class="social__link" href="#">
                 <span class="visually-hidden">vkontakte</span>
-                <svg class="social__icon social__icon--vkontakte" width="23" height="16" xmlns="http://www.w3.org/2000/svg" fill="#666666">
+                <svg class="social__icon" width="23" height="16" xmlns="http://www.w3.org/2000/svg" fill="#666666">
                   <use xlink:href="#vkontakte"></use>
                 </svg>
               </a>
@@ -246,7 +246,7 @@
               <a class="social__link" href="#">
                 <span class="visually-hidden">instagram</span>
 
-                <svg class="social__icon social__icon--instagramm" width="16" height="16" xmlns="http://www.w3.org/2000/svg" fill="#666666">
+                <svg class="social__icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" fill="#666666">
                   <use xlink:href="#instagramm"></use>
                 </svg>
               </a>
@@ -255,7 +255,7 @@
             <li class="social__item">
               <a class="social__link" href="#">
                 <span class="visually-hidden">facebook</span>
-                <svg class="social__icon social__icon--facebook" width="22" height="22" xmlns="http://www.w3.org/2000/svg" fill="none">
+                <svg class="social__icon social__icon--facebook" width="22" height="22" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#666666">
                   <use xlink:href="#facebook"></use>
                 </svg>
               </a>
