--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,8 +53,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.png 1x, ./img/catalog/product-card-1-desktop.png 2x">
-              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-1-mobile.png" srcset="./img/catalog/product-card-1-mobile@2x.png 2x" alt="" width="68" height="86">
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.webp 1x, ./img/catalog/product-card-1-desktop@2x.webp 2x">
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.png 1x, ./img/catalog/product-card-1-desktop@2x.png 2x">
+              <source srcset="./img/catalog/product-card-1-mobile.webp 1x, ./img/catalog/product-card-1-mobile@2x.webp 2x">
+              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-1-mobile.png" srcset="./img/catalog/product-card-1-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="68" height="86">
             </picture>
           </div>
           <div class="product-card__description">
@@ -82,8 +84,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.png 1x, ./img/catalog/product-card-2-desktop.png 2x">
-              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-2-mobile.png" srcset="./img/catalog/product-card-2-mobile@2x.png 2x" alt="" width="84" height="101">
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.webp 1x, ./img/catalog/product-card-2-desktop@2x.webp 2x">
+              <source srcset="./img/catalog/product-card-2-mobile.webp 1x, ./img/catalog/product-card-2-mobile@2x.webp 2x">
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.png 1x, ./img/catalog/product-card-2-desktop@2x.png 2x">
+              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-2-mobile.png" srcset="./img/catalog/product-card-2-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
             </picture>
           </div>
           <div class="product-card__description">
@@ -113,8 +117,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.png 1x, ./img/catalog/product-card-3-desktop.png 2x">
-              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-3-mobile.png" srcset="./img/catalog/product-card-3-mobile@2x.png 2x" width="68" height="78" alt="">
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.webp 1x, ./img/catalog/product-card-3-desktop@2x.webp 2x">
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.png 1x, ./img/catalog/product-card-3-desktop@2x.png 2x">
+              <source srcset="./img/catalog/product-card-3-mobile.webp 1x, ./img/catalog/product-card-3-mobile@2x.webp 2x">
+              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-3-mobile.png" srcset="./img/catalog/product-card-3-mobile@2x.png 2x" width="68" height="78" alt="стаканчик с кошачьей едой">
             </picture>
           </div>
           <div class="product-card__description">
@@ -144,8 +150,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.webp 1x, ./img/catalog/product-card-4-desktop@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.png 1x, ./img/catalog/product-card-4-desktop.png 2x">
-              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-4-mobile.png" srcset="./img/catalog/product-card-4-mobile@2x.png 2x" alt="" width="84" height="101">
+              <source srcset="./img/catalog/product-card-4-mobile.webp 1x, ./img/catalog/product-card-4-mobile@2x.webp 2x">
+              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-4-mobile.png" srcset="./img/catalog/product-card-4-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
             </picture>
           </div>
           <div class="product-card__description">
@@ -175,8 +183,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.webp 1x, ./img/catalog/product-card-5-desktop@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.png 1x, ./img/catalog/product-card-5-desktop.png 2x">
-              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-5-mobile.png" srcset="./img/catalog/product-card-5-mobile@2x.png 2x" alt="" width="68" height="78">
+              <source srcset="./img/catalog/product-card-5-mobile.webp 1x, ./img/catalog/product-card-5-mobile@2x.webp 2x">
+              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-5-mobile.png" srcset="./img/catalog/product-card-5-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="68" height="78">
             </picture>
           </div>
           <div class="product-card__description">
@@ -206,8 +216,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.webp 1x, ./img/catalog/product-card-6-desktop@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.png 1x, ./img/catalog/product-card-6-desktop.png 2x">
-              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-6-mobile.png" srcset="./img/catalog/product-card-6-mobile@2x.png 2x" alt="" width="84" height="101">
+              <source srcset="./img/catalog/product-card-6-mobile.webp 1x, ./img/catalog/product-card-6-mobile@2x.webp 2x">
+              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-6-mobile.png" srcset="./img/catalog/product-card-6-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
             </picture>
           </div>
           <div class="product-card__description">
@@ -237,8 +249,10 @@
         <article class="product-card">
           <div class="product-card__img-wrapper">
             <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.webp 1x, ./img/catalog/product-card-7-desktop@2x.webp 2x">
               <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.png 1x, ./img/catalog/product-card-7-desktop.png 2x">
-              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-7-mobile.png" srcset="./img/catalog/product-card-7-mobile@2x.png 2x" alt="" width="72" height="84">
+              <source srcset="./img/catalog/product-card-7-mobile.webp 1x, ./img/catalog/product-card-7-mobile@2x.webp 2x">
+              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-7-mobile.png" srcset="./img/catalog/product-card-7-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="72" height="84">
             </picture>
           </div>
           <div class="product-card__description">
@@ -266,7 +280,7 @@
         </article>
 
         <article class="product-card product-card--last">
-          <img class="product-card__icon" src="./img/catalog/icon-plus-mobile.svg" width="30" height="30" alt="">
+          <img class="product-card__icon" src="./img/catalog/icon-plus-mobile.svg" width="30" height="30" alt="Плюс">
           <p class="product-card__title product-card__title--last">Показать еще 100500 товаров</p>
           <p class="product-card__text">На самом деле вкусов гораздо больше!</p>
           <a class="button product-card__button product-card__button--last" href="#">Показать все</a>
@@ -321,7 +335,7 @@
           <section class="present">
             <div class="present__wrapper">
               <h2 class="visually-hidden">Акция</h2>
-              <img class="present__img" src="./img/present/icon_present.svg" width="78" height="80" alt="Изображение подарочной коробки">
+              <img class="present__img" src="./img/present/icon_present.svg" width="78" height="80" alt="Подарочная коробка">
               <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
             </div>
           </section>
